# socialsuit-backend

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  DATABASE_OPTIMIZATION_GUIDE.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile.social_suit  Dockerfile.social_suit.worker  Dockerfile.sparkr  Dockerfile.sparkr.worker  ENV_MATRIX.md  README.md  README_MONITORING.md  SECURITY_IMPROVEMENTS.md  celery_app.py  celery_worker.py  cleaned-requirements.txt  commit_openapi.ps1  db_migrate.ps1  deploy.ps1  deploy.sh  developer_docs.md  docker-compose.override.yml  docker-compose.yml  edge_test_report.html  endpoint_test_report.html  flask_health_server.py  health_check_server.py  init_analytics.py  main.py  merge_tests.py  migrate.ps1  migration_plan.md  optimization_demo.py  post_recycle_test_report.html  pytest.ini  render.yaml  (+21 more)
.github/: pull_request_template.md
Dockerfile_folder/: celery_beat.Dockerfile  celery_worker.Dockerfile
core/: config.py  dependencies.py
docs/: analytics_system.md  badges.md  ci_cd_workflows.md  dashboard-setup.md  database_migrations.md  monitoring.md  openapi.md  prometheus-alerts.yml  release-checklist.md
examples/: ab_testing_example.py  monitoring_setup.py
frontend_examples/: analytics_dashboard.html
middleware/: sanitization_middleware.py
migrations/: add_unified_auth_fields.py
scripts/: optimize_databases.py
services/: ab_testing.py  ai_content.py  analytics.py  auto_engagement.py  scheduled_post_service.py  smart_schedule.py  thumbnail.py  user_services.py
shared/: CHANGELOG.md  INSTALLATION.md  README.md  VERSIONING.md  pyproject.toml  setup.py  test_import.py  test_shared_components.py  verify_structure.py
shared/auth/: __init__.py  dependencies.py  jwt.py  middleware.py  rate_limiter.py  security_middleware.py  unified_auth_service.py
shared/database/: redis_manager.py  sqlalchemy_base.py
shared/docs/: logging_formats.md  middleware_integration.md
shared/examples/: __init__.py  integration_example.md  middleware_example.py  response_envelope_example.py  simple_example.py  usage_example.py
shared/shared/: __init__.py
shared/shared/auth/: __init__.py  jwt.py  password.py
shared/shared/database/: __init__.py  connection.py  pagination.py  repository.py  session.py
shared/shared/logging/: __init__.py  logger.py  structured.py
shared/shared/middleware/: __init__.py  correlation.py  exception_handlers.py  health.py  rate_limiter.py  request_logger.py
shared/shared/utils/: __init__.py  datetime.py  response_envelope.py  response_wrapper.py  validation.py
shared/tests/: __init__.py  test_response_envelope.py
shared/tests/auth/: __init__.py  test_jwt.py  test_password.py
shared/tests/database/: test_repository.py
shared/tests/middleware/: test_correlation.py  test_health.py
shared/tests/utils/: test_datetime.py  test_validation.py
shared/utils/: common.py  config.py  logging_utils.py  sanitization.py
social-suit/: .env.example  CONTRIBUTING.md  Dockerfile  Makefile  (+4 more)
suit_research/: .dockerignore  .env.example  .env.template  .pre-commit-config.yaml  ALERT_SYSTEM_IMPLEMENTATION.md  AUTHENTICATION_GUIDE.md  CRAWLER_FRAMEWORK.md  DATABASE_SETUP.md  Dockerfile  PROJECT_SUMMARY.md  README.md  alembic.ini  demo_crawler.py  docker-compose.yml  init_database.py  main.py  main_test.py  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  start_crawler.py  start_dev.py  test_app.py  test_auth_system.py  test_celery_crawler.py  test_database_schema.py  test_vc_crawler.py  test_vc_crawler_simple.py  test_webhook_system.py
suit_research/.github/workflows/: ci.yml
suit_research/alembic/versions/: add_project_category_field.py
suit_research/app/api/schemas/: __init__.py  alert.py  auth.py  investor.py  project.py  webhook_admin.py
suit_research/app/api/v1/: api.py  auth.py
suit_research/app/api/v1/endpoints/: alerts.py  auth.py  crawler.py  enrichment.py  funding_rounds.py  investors.py  projects.py  protected.py  research.py  status.py  watchlist.py  webhook_admin.py  webhooks.py
suit_research/app/core/: auth_middleware.py  auth_utils.py  celery_app.py  config.py  database.py  mongodb.py  mongodb_setup.py  redis_client.py  webhook_service.py
suit_research/app/crawlers/: base_crawler.py  base_fetcher.py  base_parser.py  normalizer.py  vc_crawler.py
suit_research/app/crud/: base.py  project.py
suit_research/app/migrations/: env.py
suit_research/app/migrations/versions/: 001_initial_schema.py
suit_research/app/models/: __init__.py  alert.py  api.py  crawl.py  funding.py  investor.py  project.py  research.py  user.py  vc.py  webhook_delivery.py
suit_research/app/schemas/: auth_schemas.py  project.py
suit_research/app/services/: category_detector.py  crawler_service.py  enrichment.py  funding_parser.py  fuzzy_matcher.py  investor_service.py  research_service.py
suit_research/app/shared/auth/: __init__.py  dependencies.py  unified_auth_service.py
suit_research/app/tasks/: alert_tasks.py  crawler_tasks.py  enrichment_tasks.py  notification_tasks.py  research_tasks.py  webhook_tasks.py
suit_research/configs/: techcrunch_rss_config.py  vc_crawler_config.py
suit_research/docs/: api_examples.md
suit_research/migrations/: add_unified_auth_fields.py
suit_research/scripts/: seed_vcs.py
suit_research/tests/: conftest.py  test_alert_system.py  test_crawlers.py  test_enrichment.py  test_funding_parser.py  test_integration.py  test_investor_service.py  test_parsers.py  test_project_categorization.py
(+403 files in other folders)
